[gd_scene load_steps=24 format=2]

[ext_resource path="res://Fonts/GameLabelFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Game/Main.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/QuantizedTimer.gd" type="Script" id=3]
[ext_resource path="res://Scenes/GameButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Game/PlayLog.gd" type="Script" id=23]
[ext_resource path="res://Fonts/BalooTamma2-SemiBold.ttf" type="DynamicFontData" id=27]
[ext_resource path="res://Styles/Playback_button_normal.tres" type="StyleBox" id=32]
[ext_resource path="res://Styles/Playback_button_hover.tres" type="StyleBox" id=33]
[ext_resource path="res://Styles/Playback_button_focus.tres" type="StyleBox" id=34]
[ext_resource path="res://Styles/Playback_button_pressed.tres" type="StyleBox" id=35]
[ext_resource path="res://Styles/Playback_button_disabled.tres" type="StyleBox" id=36]
[ext_resource path="res://Styles/Quit_button_focus.tres" type="StyleBox" id=37]
[ext_resource path="res://Styles/Quit_button_hover.tres" type="StyleBox" id=38]
[ext_resource path="res://Styles/Quit_button_pressed.tres" type="StyleBox" id=39]
[ext_resource path="res://Styles/Quit_button_disabled.tres" type="StyleBox" id=40]
[ext_resource path="res://Styles/Quit_button_normal.tres" type="StyleBox" id=41]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0196078, 0.262745, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_top = 0.0
content_margin_bottom = 15.0
bg_color = Color( 0.300407, 0.4516, 0.610352, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.564706, 0.643137, 0.72549, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.56365, 0.64503, 0.725098, 1 )
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=4]
size = 43
font_data = ExtResource( 27 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="PlayLog" type="Node2D"]
script = ExtResource( 23 )
__meta__ = {
"_edit_horizontal_guides_": [ 140.0, 160.0, 940.0 ],
"_edit_vertical_guides_": [ 960.0, 580.0, 700.0, 760.0, 1160.0, 1220.0, 1340.0 ]
}

[node name="Main" parent="." instance=ExtResource( 2 )]
mode = 1

[node name="PlaybackUI" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1000.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 3 )

[node name="Control" type="Control" parent="PlaybackUI"]
margin_right = 1920.0
margin_bottom = 80.0

[node name="QuitButon" parent="PlaybackUI/Control" instance=ExtResource( 14 )]
margin_left = 1816.0
margin_top = 16.0
margin_right = 1896.0
margin_bottom = 66.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 38 )
custom_styles/pressed = ExtResource( 39 )
custom_styles/focus = ExtResource( 37 )
custom_styles/disabled = ExtResource( 40 )
custom_styles/normal = ExtResource( 41 )
enabled_focus_mode = 0
text = "EXIT"

[node name="PauseButton" parent="PlaybackUI/Control" instance=ExtResource( 14 )]
margin_left = 1376.0
margin_top = 16.0
margin_right = 1456.0
margin_bottom = 66.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 33 )
custom_styles/pressed = ExtResource( 35 )
custom_styles/focus = ExtResource( 34 )
custom_styles/disabled = ExtResource( 36 )
custom_styles/normal = ExtResource( 32 )
enabled_focus_mode = 0
text = "PAUSE"

[node name="PlaybackLocation" type="HSlider" parent="PlaybackUI/Control"]
margin_left = 576.0
margin_top = 32.0
margin_right = 1344.0
margin_bottom = 48.0
custom_styles/slider = SubResource( 7 )
custom_styles/grabber_area_highlight = SubResource( 9 )
custom_styles/grabber_area = SubResource( 8 )
value = 50.0
editable = false
scrollable = false

[node name="KeyLabel" type="Label" parent="PlaybackUI/Control"]
margin_left = 24.0
margin_right = 112.0
margin_bottom = 80.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "KEY"
align = 1
valign = 1

[node name="KeyInput" type="Label" parent="PlaybackUI/Control"]
margin_left = 128.0
margin_right = 228.0
margin_bottom = 80.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlaybackUI/Control/KeyInput"]
anims/RESET = SubResource( 5 )
anims/Show = SubResource( 6 )

[node name="PlaybackTimer" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="load_next_shape" from="Main/MainTimer/Hold" to="Main/ShapeLoader" method="load_next_shape"]
[connection signal="set_gravity" from="Main/MainTimer/Levels" to="Main/MainTimer/SoftDrop" method="set_gravity"]
[connection signal="pressed" from="PlaybackUI/Control/QuitButon" to="." method="_on_QuitButon_pressed"]
[connection signal="pressed" from="PlaybackUI/Control/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="timer_pre_update" from="PlaybackTimer" to="." method="_on_PlaybackTimer_timer_pre_update"]

[editable path="Main"]
[editable path="Main/Instructions/VBoxContainer/left"]
[editable path="Main/Instructions/VBoxContainer/right"]
[editable path="Main/Instructions/VBoxContainer/soft_drop"]
[editable path="Main/Instructions/VBoxContainer/hard_drop"]
[editable path="Main/Instructions/VBoxContainer/rotate_left"]
[editable path="Main/Instructions/VBoxContainer/rotate_right"]
[editable path="Main/Instructions/VBoxContainer/hold"]
[editable path="Main/MainTimer/Hold"]
[editable path="Main/MainTimer/Hold/ShapePreview"]
[editable path="Main/MainTimer/Hold/ShapePreview/Grid"]
[editable path="Main/MainTimer/BlockGravity"]
